# mcp-demo-1

./: .gitignore  2.0.0  ARCHITECTURE.md  DOC-GENERATED.md  HOW_TO_RUN.md  IMPLEMENTATION_PLAN.md  MCP_SYSTEM_PROMPT.md  PROMPT.md  README.md  SAMPLE_SQL.md  USER_GUIDE.md  active_sessions.json  bmo_data.db  bmo_mcp_server.py  config_mcp_server.json  database.py  main.py  mcp_agent.py  mcp_server.py  models.py  pyproject.toml  requirements.txt  run.bat  run_mcp_server.bat  run_sql_mcp_server.bat  seed_data.py  sql_mcp_server.py  start_server.bat  utils_mcp_server.py
.amazonq/rules/: backend-rules.md  frontend-rules.md  project-context.md
client/: README.md  index.html
deployment/: README.md  new-instance.sh
